Exercise 1 - network policy/policy-all-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-all-deny
  namespace: default
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
