Exercise 1 - network policy/policy-details.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-details-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from:
    - podSelector:
        matchLabels:
          app: productpage
