Exercise 1 - network policy/policy-product-page.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-productpage-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: productpage
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from: 
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
