Exercise 1 - network policy/policy-ratings.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ratings-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ratings
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from:
    - podSelector:
        matchLabels:
          app: reviews
